# Neindustrijska_robotika

./: LICENSE  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
.devcontainer/: devcontainer.json
Docs/: README.md
Docs/Actionlib/: README.md
Docs/Navigation/: README.md
Docs/Services/: README.md
Docs/URDF/: README.URDF.md  README.XACRO.md
docker/: .env  Dockerfile  docker-compose-dev-windows.yml  docker-compose-dev.yml  ros_entrypoint_lidar.sh
src/myrobot_description/: CMakeLists.txt  package.xml
src/myrobot_description/launch/: myrobot_rviz.launch
src/myrobot_description/rviz/: myrobot.rviz
src/myrobot_description/urdf/: common_macros.xacro  materials.xacro  myrobot.gazebo.xacro  myrobot.urdf  myrobot.urdf.xacro
src/myrobot_gazebo/: package.xml
src/myrobot_gazebo/launch/: myrobot_gazebo.launch
src/myrobot_navigation/: CMakeLists.txt  package.xml
src/myrobot_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml
src/myrobot_navigation/launch/: myrobot_nav.launch
src/myrobot_slam/: CMakeLists.txt  package.xml
src/myrobot_slam/config/: gmapping.yaml
src/myrobot_slam/launch/: myrobot_gmapping.launch
src/turtlesim_controller/: CMakeLists.txt
src/turtlesim_controller/src/: turtlesim_controler_node.py
